# Oratio

./: .env.example  .env.production  .replit  API_DOCUMENTATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  replit.md  setup.ps1  setup.sh  start-backend.ps1  start-frontend.ps1
attached_assets/: Pasted--Build-Prompt-Oratio-The-AI-Debate-Platform-Project-Summary-Build-Oratio--1762550580878_1762550580880.txt  Pasted--warnOnce-react-router-dom-js-v-a3c5759a-4393-logDeprecation-react-router-dom-js-v-a3c5759a-4396-1762560439328_1762560439331.txt  Pasted-ERROR-Exception-in-ASGI-application-Traceback-most-recent-call-last-File-home-runner-wo-1762587112897_1762587112897.txt  Pasted-api-js-71-GET-rooms-list-failed-SyntaxError-Unexpected-token-DOCTYPE-is-not-valid-J-1762572197449_1762572197451.txt  Pasted-websocket-js-17-WebSocket-connection-to-wss-1b30c50e-5d45-4d93-a9ab-7423c61d9c21-00-1f0hhy6mf29d9-1762636123740_1762636123741.txt
backend/: README.md  requirements.txt
backend/app/: cache.py  config.py  database.py  gemini_ai.py  main.py  replit_ai.py  replit_auth.py  replit_db.py  schemas.py  supabase_db.py
backend/app/routers/: ai.py  auth.py  debate.py  participants.py  rooms.py  spectators.py  trainer.py  uploads.py  user.py  utils.py
backend/app/websockets/: __init__.py  debate.py  spectator.py  trainer.py
frontend/: .env.production  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: BottomTabBar.jsx  Layout.jsx  (+1 more)
(+21 files in other folders)
