[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.2",
    "databases>=0.9.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.0",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.6",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "replit>=4.1.2",
    "replit-ai>=0.0.11",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
